# cpu_info

./: Cargo.toml  README.md
src/: lib.rs  linux.rs  main.rs
